Update and rename Curso relâmpago de Python - Exercícios.ipynb to Python exercise.ipynb

--- a/Python exercise.ipynb
+++ b/Python exercise.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Curso relâmpago de Python - Exercícios\n",
     "\n",
-    "Este é um exercício opcional para testar sua compreensão sobre o Python Basics. Se você achar isso extremamente desafiador, então você provavelmente ainda não está pronto para o resto deste curso e não tem experiência de programação suficiente para continuar. Eu sugiro que você faça outro curso mais orientado para iniciantes, como [Complete Python Bootcamp](https://www.udemy.com/complete-python-bootcamp)"
+    "Python Basics."
    ]
   },
   {
