--- a/Python exercise.ipynb
+++ b/Python exercise.ipynb
@@ -4,9 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Curso relâmpago de Python - Exercícios\n",
+    "# Python Basics.",
     "\n",
-    "Python Basics."
    ]
   },
   {
