--- a/Python exercise.ipynb
+++ b/Python exercise.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python Basics.",
+    "# Python Basics.\n",
     "\n",
+    " "
    ]
   },
   {
